--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,11 +4,5 @@
 
 {{ partial "jumbotron" (dict "imageUrl" "/img/home/jumbotron.jpg" "title" "A Termsheet for Netlify" "subtitle" "From your friends at General Catalyst") }}
 
-{{ partial "short-text" (dict "heading" "Why Kaldi?" "text" "Kaldi is the coffee store for everyone who believes that great coffee shouldn't just taste good, it should do good too. We source all of our beans directly from small scale sustainable farmers and make sure part of the profits are reinvested in their communities.")}}
+{{ partial "short-text" (dict "heading" "Why General Catalyst?" "text" "We're all in on Netlify and will be available at any time to help you build a killer company.")}}
 
-{{ partial "2-up" (dict "heading" "What we offer" "description" "General Catalyst is great." "svg1" "img/illustrations/coffee.svg" "text1" "We sell green and roasted coffee beans that are sourced directly from independent farmers and farm cooperatives. We’re proud to offer a variety of coffee beans grown with great care for the environment and local communities. Check our post or contact us directly for current availability." "svg2" "/img/illustrations/coffee-gear.svg" "text2" "We offer a small, but carefully curated selection of brewing gear and tools for every taste and experience level. No matter if you roast your own beans or just bought your first french press, you’ll find a gadget to fall in love with in our shop." "buttonText" "See all products" "buttonLink" "/products"  ) }}
-
-
-{{ partial "blog" . }}
-
-{{ partial "footer" . }}
