--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -22,7 +22,7 @@
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="business.business">
-		<meta property="og:title" content="Kaldi | Great coffee with a conscience">
+		<meta property="og:title" content="General Catalyst">
 		<meta property="og:url" content="/">
 		<meta property="og:image" content="/og-image.jpg">
 
