--- a/src/css/imports/_colors.css
+++ b/src/css/imports/_colors.css
@@ -8,10 +8,6 @@
   color: --var(--highlight);
 }
 
-.purple {
-  color: var(--purple);
-}
-
 .white {
   color: var(--white);
 }
@@ -41,7 +37,7 @@
 }
 
 .bg-primary {
-  background-color: var(--grey-1);
+  background-color: var(--primary);
 }
 
 .bg-highlight {
