--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -6,7 +6,7 @@
           {{.title}}
         </h1>
       </div>
-      <div class="mw7 relative bg-fix-primary">
+      <div class="mw7 relative black">
         {{ if .subtitle }}
         <p class="b f4 di lh-title mb3 white mw6 ">
           {{.subtitle}}
