--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,9 +2,9 @@
 
 {{ partial "nav" . }}
 
-{{ partial "jumbotron" (dict "imageUrl" "/img/home/jumbotron.jpg" "title" "A Termsheet for Netlify" "subtitle" "From Trevor, Steve, Hemant, and all of your friends at General Catalyst" ) }}
+{{ partial "jumbotron" (dict "imageUrl" "/img/home/jumbotron.jpg" "title" "A Termsheet for Netlify" "subtitle" "From Trevor, Steve, and all of your friends at General Catalyst" ) }}
 
 {{ partial "short-text" (dict "heading" "Why General Catalyst?" "text" "We're all in on Netlify and will be available at any time to help you build a killer company. Trevor will have a portfolio of 1... you. Let's do this together!")}}
 
-<h1>Here's the link</h1>
-<a href="/img/home/jumbotron.jpg">Termsheet</a>
+<h1><center>Here's the link<center></h1>
+<a href="/img/home/termsheet.pdf">Termsheet</a>
