--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,4 +6,4 @@
 
 {{ partial "short-text" (dict "heading" "Why General Catalyst?" "text" "We're all in on Netlify and will be available at any time to help you build a killer company. Trevor will have a portfolio of 1... you. Let's do this together!")}}
 
-<h1><center>And here it is: <a href="/img/home/termsheet.pdf">Series A Termsheet</a> <center></h1>
+<h1><center>And here it is: <a href="/img/home/Netlify-Series-A-TS-GC-4.27.2017.pdf">Series A Termsheet</a> <center></h1>
