--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,6 +4,6 @@
 
 {{ partial "jumbotron" (dict "imageUrl" "/img/home/jumbotron.jpg" "title" "A Termsheet for Netlify" "subtitle" "From Trevor, Steve, Hemant, and all of your future partners at General Catalyst" ) }}
 
-{{ partial "short-text" (dict "heading" "Why General Catalyst?" "text" "We're all in on Netlify and will be available at any time to help you build a killer company. Trevor will have a portfolio of 1... you. Let's do this together!")}}
+{{ partial "short-text" (dict "heading" "Why General Catalyst?" "text" "We're \"All In\" on Netlify and will work tirelessly to help you build a killer company. Let's do this together!")}}
 
 <h1><center>And here it is: <a href="/img/home/Netlify-Series-A-TS-GC-4.27.2017.pdf">Series A Termsheet</a> <center></h1>
